--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ packages = find:
 zip_safe = false
 install_requires =
     sopel>=7.1
-    pytz
+    PrivateBinAPI>=1.0
 
 [options.packages.find]
 exclude =
@@ -41,7 +41,7 @@ sopel.plugins =
     contextualreminders = contextualreminders.plugin
 
 [flake8]
-max-line-length = 79
+max-line-length = 100
 exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
 
 [coverage:run]
@@ -49,6 +49,6 @@ branch = True
 source = contextualreminders
 
 [isort]
-line_length = 79
+line_length = 100
 known_third_party = sopel
 known_first_party = contextualreminders
